--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,6 @@
     "name": "Lakshya",
     "version": "0.0.1",
     "description": "See the year in new tab",
-    "key": "eiaffpkdafagdmpcenjnidgaojcmblog",
     "icons":{
         "16": "assets/icon16.png",
         "32": "assets/icon32.png",
@@ -11,7 +10,7 @@
         "128": "assets/icon128.png"
     },
 
-    "permissions": ["activeTab", "tabs", "storage", "scripting"],
+    "permissions": ["activeTab", "tabs", "storage"],
     "host_permissions": ["<all_urls>"],
 
     "chrome_url_overrides": {
@@ -30,7 +29,7 @@
     },
     "action":{
         "default_popup": "popup/popup.html",
-        "default_title": "RASENGAN",
+        "default_title": "Lakshya",
         "default_icon": "assets/icon48.png"
     }
   }
