--- a/manifest.json
+++ b/manifest.json
@@ -4,32 +4,32 @@
     "version": "0.0.1",
     "description": "See the year in new tab",
     "icons":{
-        "16": "assets/icon16.png",
-        "32": "assets/icon32.png",
-        "48": "assets/icon48.png",
-        "128": "assets/icon128.png"
+        "16": "./assets/icon16.png",
+        "32": "./assets/icon32.png",
+        "48": "./assets/icon48.png",
+        "128": "./assets/icon128.png"
     },
 
     "permissions": ["activeTab", "tabs", "storage"],
     "host_permissions": ["<all_urls>"],
 
     "chrome_url_overrides": {
-      "newtab": "new_tab/new_tab.html"
+      "newtab": "./new_tab/new_tab.html"
     },
     "content_scripts":[
         {
             "matches": ["<all_urls>"],
             "js":[
-                "new_tab/new_tab.js"
+                "./new_tab/new_tab.js"
             ]
         }
     ],
     "background":{
-        "service_worker": "backgroundWrapper.js"
+        "service_worker": "./background/backgroundWrapper.js"
     },
     "action":{
-        "default_popup": "popup/popup.html",
+        "default_popup": "./popup/popup.html",
         "default_title": "Lakshya",
-        "default_icon": "assets/icon48.png"
+        "default_icon": "./assets/icon48.png"
     }
   }
