--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,31 @@
 {
-    "manifest_version": 3,
-    "name": "Lakshya",
-    "version": "0.0.1",
-    "description": "See the year in new tab",
-    "icons": {
-        "16": "./assets/icon16.png",
-        "32": "./assets/icon32.png",
-        "48": "./assets/icon48.png",
-        "128": "./assets/icon128.png"
-    },
-    "permissions": [
-        "activeTab",
-        "tabs",
-        "storage"
-    ],
-    "host_permissions": [
-        "<all_urls>"
-    ],
-    "chrome_url_overrides": {
-        "newtab": "./new_tab/new_tab.html"
-    },
-    "background": {
-        "service_worker": "./background/backgroundWrapper.js"
-    },
-    "action": {
-        "default_popup": "./popup/popup.html",
-        "default_title": "Lakshya",
-        "default_icon": "./assets/icon48.png"
+  "manifest_version": 3,
+  "name": "Lakshya",
+  "version": "0.0.1",
+  "description": "See the year in new tab",
+  "icons": {
+    "16": "./assets/icon16.png",
+    "32": "./assets/icon32.png",
+    "48": "./assets/icon48.png",
+    "128": "./assets/icon128.png"
+  },
+  "permissions": ["activeTab", "tabs", "storage", "commands"],
+  "host_permissions": ["<all_urls>"],
+  "chrome_url_overrides": {
+    "newtab": "./new_tab/new_tab.html"
+  },
+  "background": {
+    "service_worker": "./background/backgroundWrapper.js"
+  },
+  "action": {
+    "default_popup": "./popup/popup.html",
+    "default_title": "Lakshya",
+    "default_icon": "./assets/icon48.png"
+  },
+  "commands": {
+    "toggle-showTasks-display": {
+      "suggested_key": { "default": "Ctrl+Shift+7", "mac": "MacCtrl+Shift+7" },
+      "description": "show/hide tasks"
     }
+  }
 }
